# FastApi---Projeto-Pizzaria

./: .env  .env.example  .gitignore  .pylintrc  404.html  Makefile  README-GITHUB.md  README.md  alembic.ini  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
STATUS_FINAL/: index.html
alembic/: env.py
alembic/versions/: f4a7b9af26cb_estrutura_inicial_da_pizzaria.py
api/authentication/: index.html
api/endpoints/: index.html
api/overview/: index.html
authentication/auth-manager/: index.html
authentication/centralized-system/: index.html
backend/: create_admin_user.py  create_users.py
backend/src/: main.py
backend/src/config/: __init__.py  database.py  security.py
backend/src/models/: __init__.py  base.py  item.py  order.py  order_item.py  user.py
backend/src/routers/: auth_routes.py  item_routes.py  order_routes.py  user_routes.py
backend/src/schemas/: __init__.py  auth_schemas.py  common_schemas.py  examples.py  item_schemas.py  order_schemas.py
backend/src/utils/: init_db.py  order_calculations.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_api.py  test_items_api.py  test_order_item_management.py  test_orders_api.py  test_users_api.py
backend/tests/unit/: test_auth.py  test_models.py
backend/utils/: __init__.py  create_admin.py  create_default_users.py  create_test_user.py  list_items.py  make_admin.py  populate_menu.py  pytest.ini
deploy/docker/: index.html
deploy/production/: index.html
development/troubleshooting/: index.html
docker/: Dockerfile.backend  Dockerfile.frontend  README.Docker.md  docker-setup.sh  nginx.conf  requirements.txt
docker/init-scripts/: 01-init.sh
docs/: STATUS_FINAL.md  index.md
docs/api/: authentication.md  endpoints.md  overview.md
docs/authentication/: auth-manager.md  centralized-system.md
docs/deploy/: docker.md  production.md
docs/development/: troubleshooting.md
docs/frontend/: components.md  interface.md
docs/guides/: ai-instructions.md  development.md  powershell-scripts.md
frontend/: admin.html  index.html  test.html  test_notifications.html
frontend/assets/css/: admin-login.css  admin.css  components.css  responsive.css  style.css
frontend/assets/js/: admin.js  api.js  auth-manager.js  auth.js  cart.js  config.js  main.js  menu.js  test-auth.js
frontend/components/: index.html
frontend/interface/: index.html
frontend/src/: app.js  index.html  styles.css
guides/ai-instructions/: index.html
guides/development/: index.html
guides/powershell-scripts/: index.html
scripts/: dev-commands.sh  git-commands.md  setup.sh
site/: 404.html
site/api/authentication/: index.html
site/api/overview/: index.html
site/authentication/auth-manager/: index.html
site/deploy/docker/: index.html
site/deploy/production/: index.html
site/frontend/components/: index.html
site/guides/ai-instructions/: index.html
site/guides/powershell-scripts/: index.html
site/search/: search_index.json
